--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,1 +1,71 @@
-<p>This is the partial for view 1.</p>
+<div class="container" data-ng-if="mobileIdChallenge">
+    <div class="row">
+        <div class="col-md-6 text-right">
+            <img src="img/logo-mobiil-id.png">
+        </div>
+        <div class="col-md-4">
+            <p class="lead">Mobile ID login code: <strong data-ng-bind="mobileIdChallenge"></strong></p>
+
+            <p>Login sms</p>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-12 text-center">
+        <h4> Choose login method</h4>
+    </div>
+</div>
+
+<div class="container" data-ng-if="!mobileIdChallenge">
+    <div class="row">
+
+        <div class="col-sm-3">
+            <a class="btn btn-dark btn-lg btn-block">
+                <i class="fa fa-google-plus"></i> Google login
+            </a>
+        </div>
+
+        <div class="col-sm-3">
+            <a class="btn btn-dark btn-lg btn-block">
+                <i class="fa fa-facebook-square"></i>Facebook login
+            </a>
+        </div>
+
+        <div class="col-sm-3">
+            <a class="btn btn-dark btn-lg btn-block" data-ng-click="idCardAuth()">
+                <img src="img/id-kaart.png" style="width: 30px; height: auto"> ID card login
+            </a>
+        </div>
+
+        <div class="col-sm-3">
+            <div class="form-group" data-ng-class="{'has-error': validation.error.idCode}">
+                <input type="text" class="form-control" id="idCode" data-ng-model="mobileId.idCode"
+                       placeholder="Personal code" data-input-pattern="[^0-9]+" data-input-value-control
+                       maxlength="11">
+
+                <div>
+                    <span data-ng-if="validation.error.idCode === 'required'" class="help-block text-left"
+                          data-translate="Personal code required"></span>
+                    <span data-ng-if="validation.error.idCode === 'invalid'" class="help-block text-left"
+                          data-translate="Personal code invalid"></span>
+                </div>
+            </div>
+            <div class="form-group">
+                <input type="text" class="form-control" id="phoneNumber" data-ng-model="mobileId.phoneNumber"
+                       placeholder="+372 XX XXX XXX" data-input-pattern="[^0-9+]+" data-input-value-control>
+
+                <div>
+                    <span data-ng-if="validation.error.phoneNumber === 'required'" class="help-block text-left"
+                          data-translate="Phone nr required"></span>
+                    <span data-ng-if="validation.error.phoneNumber === 'notEstonian'" class="help-block text-left"
+                          data-translate="Phone nr is not Estonian"></span>
+                </div>
+            </div>
+            <a class="btn btn-dark btn-lg btn-block" data-ng-click="mobileIdAuth()">
+                <img src="img/logo-mobiil-id.png"> MobileID login
+            </a>
+        </div>
+
+    </div>
+</div>
