lisasin service'id, vajavad kohendamist

--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,9 @@
   <script src="view1/view1.js"></script>
   <script src="view2/view2.js"></script>
   <script src="services/services.js"></script>
+  <script src="services/alertService.js"></script>
   <script src="services/authenticatedUserService.js"></script>
+  <script src="services/authenticationService.js"></script>
   <script src="services/serverCallService.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
