--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -11,7 +11,7 @@
     </div>
 </div>
 
-<div class="row">
+<div class="row" data-ng-if="!mobileIdChallenge">
     <div class="col-md-12 text-center">
         <h4> Choose login method</h4>
     </div>
