google login after linking accounts

--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -21,9 +21,10 @@
     <div class="row">
 
         <div class="col-sm-3">
-            <a class="btn btn-dark btn-lg btn-block">
-                <i class="fa fa-google-plus"></i> Google login
-            </a>
+            <span class="btn btn-dark btn-lg btn-block">
+                <!-- <i class="fa fa-google-plus"></i> Google login <br /> -->
+                <google-plus-signin clientid="{{googleClientID}}"></google-plus-signin>
+            </span>
         </div>
 
         <div class="col-sm-3">
