--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -13,7 +13,7 @@
         <div class="col-sm-6" data-ng-if="!user.googleID">
             <span class="btn btn-dark btn-lg btn-block">
                 <i class="fa fa-google-plus"></i> Link with Google <br />
-                <google-plus-signin clientid="609780541620-0d2pkdl0gg8pkv98l76ei2tkh92kd1rp.apps.googleusercontent.com"></google-plus-signin>
+                <google-plus-signin clientid="{{googleClientID}}"></google-plus-signin>
             </span>
             
         </div>
