lisasin mingi tausta

--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -11,12 +11,12 @@
     </div>
 </div>
 
-<div class="container col-md-3 col-md-push-4 vertical-center" data-ng-if="!mobileIdChallenge">
+<div class="container col-md-4 col-md-push-4 vertical-center" data-ng-if="!mobileIdChallenge">
     <div class="login-box">
 
         <div class="row">
             <div class="col-sm12 text-center">
-                <h2><i class="fa fa-sign-in"></i> Log in</h2>
+                <h2 style="color: white"><i class="fa fa-sign-in"></i> Logi sisse</h2>
             </div>
 
             <div class="row">
@@ -49,11 +49,11 @@
 
                         <button class="btn btn-success text-center" data-ng-click="mobileIdAuth()"
                                 style="display: block; width: 100%;">
-                            Mobiil-ID
+                            Logi sisse MobiilID-ga
                         </button>
                         <button class="btn btn-success text-center" data-ng-click="idCardAuth()"
                                 style="display: block; width: 100%;">
-                            ID card
+                            Logi sisse ID kaardiga
                         </button>
                     </div>
                 </div>
@@ -61,7 +61,7 @@
 
             <div class="col-sm-12">
                 <a class="btn btn-dark btn-lg btn-block">
-                    <i class="fa fa-facebook-square"></i> Facebook
+                    <i class="fa fa-facebook-square"></i> Logi sisse Facebookiga
                 </a>
             </div>
 
