--- a/app/index-async.html
+++ b/app/index-async.html
@@ -41,7 +41,7 @@
       angular.bootstrap(document, ['myApp']);
     });
   </script>
-  <title>My AngularJS App</title>
+  <title>The Login App</title>
   <link rel="stylesheet" href="app.css">
 </head>
 <body ng-cloak>
