--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -11,12 +11,12 @@
     </div>
 </div>
 
-<div class="container col-md-4 col-md-push-4 vertical-center" data-ng-if="!mobileIdChallenge">
+<div class="login container col-md-4 col-md-push-4 vertical-center" data-ng-if="!mobileIdChallenge">
     <div class="login-box">
 
         <div class="row">
             <div class="col-sm12 text-center">
-                <h2 style="color: white"><i class="fa fa-sign-in"></i> Logi sisse</h2>
+                <h2 class="white"><i class="fa fa-sign-in"></i> Logi sisse</h2>
             </div>
 
             <div class="row">
@@ -51,6 +51,13 @@
                                 style="display: block; width: 100%;">
                             Logi sisse MobiilID-ga
                         </button>
+
+                        <div class="divider col-sm-12 col-sm-pull-3">
+                            <hr class="left"/>
+                            <span class="white-or">OR</span>
+                            <hr class="right"/>
+                        </div>
+
                         <button class="btn btn-success text-center" data-ng-click="idCardAuth()"
                                 style="display: block; width: 100%;">
                             Logi sisse ID kaardiga
@@ -59,10 +66,23 @@
                 </div>
             </div>
 
+            <div class="divider divider2 col-sm-12 col-sm-">
+                <hr class="left"/>
+                <span class="white-or">OR</span>
+                <hr class="right"/>
+            </div>
+
+
             <div class="col-sm-12">
                 <a class="btn btn-dark btn-lg btn-block">
                     <i class="fa fa-facebook-square"></i> Logi sisse Facebookiga
                 </a>
+            </div>
+
+            <div class="divider divider2 col-sm-12 col-sm-" style="padding-top: 0px;">
+                <hr class="left"/>
+                <span class="white-or">OR</span>
+                <hr class="right"/>
             </div>
 
             <div class="col-sm-12">
