lisasin normaalse view2-e

--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -57,7 +57,7 @@
 
                         <div class="divider col-sm-12 col-sm-pull-3">
                             <hr class="left"/>
-                            <span class="white-or">OR</span>
+                            <span class="white">OR</span>
                             <hr class="right"/>
                         </div>
 
@@ -71,7 +71,7 @@
 
             <div class="divider divider2 col-sm-12 col-sm-">
                 <hr class="left"/>
-                <span class="white-or">OR</span>
+                <span class="white">OR</span>
                 <hr class="right"/>
             </div>
 
@@ -84,7 +84,7 @@
 
             <div class="divider divider2 col-sm-12 col-sm-" style="padding-top: 0px;">
                 <hr class="left"/>
-                <span class="white-or">OR</span>
+                <span class="white">OR</span>
                 <hr class="right"/>
             </div>
 
