lisasin stiilid, kui oled autenditud

--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -10,25 +10,26 @@
             </div>
         </div>
 
-        <div class="container" data-ng-if="user">
+        <div class="container col-md-12" data-ng-if="user">
             <div class="row">
-                <div class="col-sm12 text-center">
+                <div class="text-center">
 
                     <div class="col-sm-3 col-sm-push-1" data-ng-if="!user.googleID">
                         <span class="btn btn-dark btn-lg btn-block">
-                            <i class="fa fa-google-plus"></i> <span class="white">Link with Google</span>  <br/>
+                            <span class="white">Link with Google</span>  <br/>
                             <google-plus-signin clientid="{{googleClientID}}"></google-plus-signin>
                         </span>
                     </div>
 
-                    <div class="col-sm-3 col-sm-push-1" data-ng-if="user.googleID">
-                        <a class="btn btn-dark btn-lg btn-block">
-                            <i class="fa fa-google-plus"></i><span class="white"> You have linked with Google</span>
-                        </a>
+                    <div class="col-sm-4 col-sm-push-1" data-ng-if="user.googleID">
+                        <div class="white" style="padding-bottom: 10px;">Congratulations!</div>
+                        <a class="btn btn-block btn-social btn-google">
+                                <span class="fa fa-google"></span> <span class="white">You have linked with Google</span>
+                            </a>
                     </div>
 
-                    <div class="col-sm-3 col-sm-push-1">
-                        <span class="btn btn-dark btn-lg btn-block">
+                    <div class="col-sm-4 col-sm-push-4">
+                        <span class="btn btn-dark btn-lg btn-block" data-ng-if="true">
                             <span class="white">Link with Facebook</span>  <br/>
                             <a class="btn btn-block btn-social btn-facebook">
                                 <span class="fa fa-facebook"></span> <span class="white">Logi sisse Facebookiga</span>
@@ -36,11 +37,13 @@
                         </span>
                     </div>
 
-                    <div class="col-sm-3 col-sm-push-1" data-ng-if="false">
-                        <a class="btn btn-dark btn-lg btn-block">
-                            <i class="fa fa-facebook-square"></i><span
-                                class="white">You have linked with Facebook</span>
-                        </a>
+                    <div class="col-sm-5 col-sm-push-3" >
+                        <span class="white">Congratulations!</span>
+                        <span class="btn btn-dark btn-lg btn-block">
+                            <a class="btn btn-block btn-social btn-facebook">
+                                <span class="fa fa-facebook"></span> <span class="white">You have linked with Facebook</span>
+                            </a>
+                        </span>
                     </div>
                 </div>
             </div>
