lisasin normaalse mobiil-ID vaate

--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,14 +1,14 @@
-<div class="container col-md-4 col-md-push-4 vertical-center" data-ng-if="mobileIdChallenge">
-    <div class="login-box">
+<div class="container col-md-8 col-md-push-1 vertical-center" data-ng-if="mobileIdChallenge">
+    <div class="login-box col-md-4 col-md-push-5">
         <div class="row">
 
             <div class="col-sm12 text-center">
-                <img src="img/logo-mobiil-id.png">
+                <h1 class="white">Mobiil-ID</h1>
             </div>
             <div class="col-sm12 text-center">
-                <p class="lead">Mobile ID login code: <strong data-ng-bind="mobileIdChallenge"></strong></p>
+                <h3 class="white">Mobile ID login code: <strong data-ng-bind="mobileIdChallenge"></strong></h3>
 
-                <p>Login sms</p>
+                <p class="white">Login sms</p>
             </div>
         </div>
     </div>
