peitsin fbga autentimise kirja ajutiselt

--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -37,7 +37,7 @@
                         </span>
                     </div>
 
-                    <div class="col-sm-5 col-sm-push-3" >
+                    <div class="col-sm-5 col-sm-push-3" data-ng-if="false">
                         <span class="white">Congratulations!</span>
                         <span class="btn btn-dark btn-lg btn-block">
                             <a class="btn btn-block btn-social btn-facebook">
