--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -77,7 +77,7 @@
 
 
             <div class="col-sm-6 col-sm-push-3">
-                <a class="btn btn-block btn-social btn-facebook">
+                <a class="btn btn-block btn-social btn-facebook" data-ng-click="facebookAuth()">
                     <span class="fa fa-facebook"></span> Logi sisse Facebookiga
                 </a>
             </div>
