--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,9 @@
   <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-directive.g-signin/google-plus-signin.js"></script>
+  <script src="bower_components/angular-facebook/lib/angular-facebook.js"></script>
   <script src="app.js"></script>
+  <script src="facebook.js"></script>
   <script src="view1/view1.js"></script>
   <script src="view2/view2.js"></script>
   <script src="services/services.js"></script>
